--- a/inst/rmarkdown/templates/02_notes/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/02_notes/skeleton/skeleton.Rmd
@@ -10,7 +10,7 @@ output:
   #   toc: yes
   #   toc_depth: 2
   #   toc_float: yes
-  theme: flatly
+  #   theme: paper
 fontfamily: palatino
 fontsize: 12pt
 geometry: margin=1in
