--- a/inst/rmarkdown/templates/01_basic/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/01_basic/skeleton/skeleton.Rmd
@@ -10,12 +10,13 @@ output:
     toc_depth: 3
     toc_float: yes
     theme: paper
+    highlight: tango
 editor_options:
   chunk_output_type: inline
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, fig.width = 7, fig.height = 5)
+knitr::opts_chunk$set(echo = TRUE, results = "chunk", fig.width = 7, fig.height = 5)
 proj_dir <- tryCatch(rprojroot::find_rstudio_root_file(),
                      error = function(e) rprojroot::find_root(".gitignore"))
 
@@ -43,6 +44,5 @@ Writes:
 # Setup
 
 ```{r packages, warning=FALSE, message=FALSE}
-rm(list = ls())
 
 ```
